Fix spacing

--- a/src/results/results.css
+++ b/src/results/results.css
@@ -16,7 +16,7 @@
 .results_sectionRow {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .results_block {
@@ -219,15 +219,12 @@
 
   .results_sectionRow {
     flex-direction: column;
+    margin-bottom: 0;
   }
 
   .results_section {
     margin-right: 0;
     padding: 0.75rem 1rem;
-  }
-
-  .results_section:last-child {
-    margin-bottom: 0;
   }
 
   .results_block {
